src/parser.output
   0  $accept : %entry% $end

   1  prog : block EOF

   2  block : blockl

   3  blockl : stmt
   4         | stmt blockl

   5  fndef : DEF VAR declwrapper ARROW TNAME COLON NEWLINE block

   6  declwrapper : LPAREN declist RPAREN
   7              | LPAREN RPAREN

   8  declist : TNAME VAR
   9          | TNAME VAR COMMA declist

  10  stmt : istmt NEWLINE
  11       | istmt EOF

  12  istmt : LPAREN exp RPAREN
  13        | VAR EQUALS exp
  14        | decl
  15        | fndef
  16        | RETURN exp

  17  decl : TNAME VAR

  18  exp : INT
  19      | VAR
  20      | bexp
  21      | LPAREN exp RPAREN

  22  bexp : exp PLUS exp
  23       | exp LESS exp
  24       | exp GREATER exp
  25       | exp AND exp
  26       | exp OR exp
  27       | exp EQUALS exp
  28       | exp STAR exp
  29       | exp MINUS exp
  30       | exp DIV exp
  31       | exp MOD exp
  32       | exp STARSTAR exp
  33       | exp INTDIV exp
  34       | exp LEQ exp
  35       | exp GEQ exp
  36       | exp IS exp
  37       | exp IN exp
  38       | exp NEQ exp

  39  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (39)

	VAR  shift 3
	TNAME  shift 4
	LPAREN  shift 5
	DEF  shift 6
	RETURN  shift 7
	.  error

	prog  goto 8
	block  goto 9
	blockl  goto 10
	stmt  goto 11
	fndef  goto 12
	istmt  goto 13
	decl  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	istmt : VAR . EQUALS exp  (13)

	EQUALS  shift 15
	.  error


state 4
	decl : TNAME . VAR  (17)

	VAR  shift 16
	.  error


state 5
	istmt : LPAREN . exp RPAREN  (12)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 20
	bexp  goto 21


state 6
	fndef : DEF . VAR declwrapper ARROW TNAME COLON NEWLINE block  (5)

	VAR  shift 22
	.  error


state 7
	istmt : RETURN . exp  (16)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 23
	bexp  goto 21


state 8
	%entry% : '\001' prog .  (39)

	.  reduce 39


state 9
	prog : block . EOF  (1)

	EOF  shift 24
	.  error


state 10
	block : blockl .  (2)

	.  reduce 2


state 11
	blockl : stmt .  (3)
	blockl : stmt . blockl  (4)

	VAR  shift 3
	TNAME  shift 4
	LPAREN  shift 5
	DEF  shift 6
	RETURN  shift 7
	EOF  reduce 3
	NEWLINE  reduce 3

	blockl  goto 25
	stmt  goto 11
	fndef  goto 12
	istmt  goto 13
	decl  goto 14


state 12
	istmt : fndef .  (15)

	.  reduce 15


state 13
	stmt : istmt . NEWLINE  (10)
	stmt : istmt . EOF  (11)

	EOF  shift 26
	NEWLINE  shift 27
	.  error


state 14
	istmt : decl .  (14)

	.  reduce 14


state 15
	istmt : VAR EQUALS . exp  (13)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 28
	bexp  goto 21


state 16
	decl : TNAME VAR .  (17)

	.  reduce 17


state 17
	exp : VAR .  (19)

	.  reduce 19


state 18
	exp : INT .  (18)

	.  reduce 18


state 19
	exp : LPAREN . exp RPAREN  (21)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 29
	bexp  goto 21


state 20
	istmt : LPAREN exp . RPAREN  (12)
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	RPAREN  shift 30
	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	.  error


state 21
	exp : bexp .  (20)

	.  reduce 20


state 22
	fndef : DEF VAR . declwrapper ARROW TNAME COLON NEWLINE block  (5)

	LPAREN  shift 48
	.  error

	declwrapper  goto 49


state 23
	istmt : RETURN exp .  (16)
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	EOF  reduce 16
	NEWLINE  reduce 16


state 24
	prog : block EOF .  (1)

	.  reduce 1


state 25
	blockl : stmt blockl .  (4)

	.  reduce 4


state 26
	stmt : istmt EOF .  (11)

	.  reduce 11


state 27
	stmt : istmt NEWLINE .  (10)

	.  reduce 10


state 28
	istmt : VAR EQUALS exp .  (13)
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	EOF  reduce 13
	NEWLINE  reduce 13


state 29
	exp : LPAREN exp . RPAREN  (21)
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	RPAREN  shift 50
	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	.  error


state 30
	istmt : LPAREN exp RPAREN .  (12)

	.  reduce 12


state 31
	bexp : exp EQUALS . exp  (27)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 51
	bexp  goto 21


state 32
	bexp : exp IS . exp  (36)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 52
	bexp  goto 21


state 33
	bexp : exp IN . exp  (37)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 53
	bexp  goto 21


state 34
	bexp : exp PLUS . exp  (22)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 54
	bexp  goto 21


state 35
	bexp : exp MINUS . exp  (29)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 55
	bexp  goto 21


state 36
	bexp : exp LESS . exp  (23)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 56
	bexp  goto 21


state 37
	bexp : exp GREATER . exp  (24)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 57
	bexp  goto 21


state 38
	bexp : exp LEQ . exp  (34)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 58
	bexp  goto 21


state 39
	bexp : exp GEQ . exp  (35)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 59
	bexp  goto 21


state 40
	bexp : exp NEQ . exp  (38)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 60
	bexp  goto 21


state 41
	bexp : exp MOD . exp  (31)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 61
	bexp  goto 21


state 42
	bexp : exp INTDIV . exp  (33)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 62
	bexp  goto 21


state 43
	bexp : exp DIV . exp  (30)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 63
	bexp  goto 21


state 44
	bexp : exp STAR . exp  (28)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 64
	bexp  goto 21


state 45
	bexp : exp STARSTAR . exp  (32)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 65
	bexp  goto 21


state 46
	bexp : exp AND . exp  (25)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 66
	bexp  goto 21


state 47
	bexp : exp OR . exp  (26)

	VAR  shift 17
	INT  shift 18
	LPAREN  shift 19
	.  error

	exp  goto 67
	bexp  goto 21


state 48
	declwrapper : LPAREN . declist RPAREN  (6)
	declwrapper : LPAREN . RPAREN  (7)

	TNAME  shift 68
	RPAREN  shift 69
	.  error

	declist  goto 70


state 49
	fndef : DEF VAR declwrapper . ARROW TNAME COLON NEWLINE block  (5)

	ARROW  shift 71
	.  error


state 50
	exp : LPAREN exp RPAREN .  (21)

	.  reduce 21


51: shift/reduce conflict (shift 31, reduce 27) on EQUALS
51: shift/reduce conflict (shift 32, reduce 27) on IS
51: shift/reduce conflict (shift 33, reduce 27) on IN
51: shift/reduce conflict (shift 34, reduce 27) on PLUS
51: shift/reduce conflict (shift 35, reduce 27) on MINUS
51: shift/reduce conflict (shift 36, reduce 27) on LESS
51: shift/reduce conflict (shift 37, reduce 27) on GREATER
51: shift/reduce conflict (shift 38, reduce 27) on LEQ
51: shift/reduce conflict (shift 39, reduce 27) on GEQ
51: shift/reduce conflict (shift 40, reduce 27) on NEQ
51: shift/reduce conflict (shift 41, reduce 27) on MOD
51: shift/reduce conflict (shift 42, reduce 27) on INTDIV
51: shift/reduce conflict (shift 43, reduce 27) on DIV
51: shift/reduce conflict (shift 44, reduce 27) on STAR
51: shift/reduce conflict (shift 45, reduce 27) on STARSTAR
51: shift/reduce conflict (shift 46, reduce 27) on AND
51: shift/reduce conflict (shift 47, reduce 27) on OR
state 51
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp EQUALS exp .  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 27
	EOF  reduce 27
	NEWLINE  reduce 27


52: shift/reduce conflict (shift 31, reduce 36) on EQUALS
52: shift/reduce conflict (shift 32, reduce 36) on IS
52: shift/reduce conflict (shift 33, reduce 36) on IN
52: shift/reduce conflict (shift 34, reduce 36) on PLUS
52: shift/reduce conflict (shift 35, reduce 36) on MINUS
52: shift/reduce conflict (shift 36, reduce 36) on LESS
52: shift/reduce conflict (shift 37, reduce 36) on GREATER
52: shift/reduce conflict (shift 38, reduce 36) on LEQ
52: shift/reduce conflict (shift 39, reduce 36) on GEQ
52: shift/reduce conflict (shift 40, reduce 36) on NEQ
52: shift/reduce conflict (shift 41, reduce 36) on MOD
52: shift/reduce conflict (shift 42, reduce 36) on INTDIV
52: shift/reduce conflict (shift 43, reduce 36) on DIV
52: shift/reduce conflict (shift 44, reduce 36) on STAR
52: shift/reduce conflict (shift 45, reduce 36) on STARSTAR
52: shift/reduce conflict (shift 46, reduce 36) on AND
52: shift/reduce conflict (shift 47, reduce 36) on OR
state 52
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp IS exp .  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 36
	EOF  reduce 36
	NEWLINE  reduce 36


53: shift/reduce conflict (shift 31, reduce 37) on EQUALS
53: shift/reduce conflict (shift 32, reduce 37) on IS
53: shift/reduce conflict (shift 33, reduce 37) on IN
53: shift/reduce conflict (shift 34, reduce 37) on PLUS
53: shift/reduce conflict (shift 35, reduce 37) on MINUS
53: shift/reduce conflict (shift 36, reduce 37) on LESS
53: shift/reduce conflict (shift 37, reduce 37) on GREATER
53: shift/reduce conflict (shift 38, reduce 37) on LEQ
53: shift/reduce conflict (shift 39, reduce 37) on GEQ
53: shift/reduce conflict (shift 40, reduce 37) on NEQ
53: shift/reduce conflict (shift 41, reduce 37) on MOD
53: shift/reduce conflict (shift 42, reduce 37) on INTDIV
53: shift/reduce conflict (shift 43, reduce 37) on DIV
53: shift/reduce conflict (shift 44, reduce 37) on STAR
53: shift/reduce conflict (shift 45, reduce 37) on STARSTAR
53: shift/reduce conflict (shift 46, reduce 37) on AND
53: shift/reduce conflict (shift 47, reduce 37) on OR
state 53
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp IN exp .  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 37
	EOF  reduce 37
	NEWLINE  reduce 37


54: shift/reduce conflict (shift 31, reduce 22) on EQUALS
54: shift/reduce conflict (shift 32, reduce 22) on IS
54: shift/reduce conflict (shift 33, reduce 22) on IN
54: shift/reduce conflict (shift 34, reduce 22) on PLUS
54: shift/reduce conflict (shift 35, reduce 22) on MINUS
54: shift/reduce conflict (shift 36, reduce 22) on LESS
54: shift/reduce conflict (shift 37, reduce 22) on GREATER
54: shift/reduce conflict (shift 38, reduce 22) on LEQ
54: shift/reduce conflict (shift 39, reduce 22) on GEQ
54: shift/reduce conflict (shift 40, reduce 22) on NEQ
54: shift/reduce conflict (shift 41, reduce 22) on MOD
54: shift/reduce conflict (shift 42, reduce 22) on INTDIV
54: shift/reduce conflict (shift 43, reduce 22) on DIV
54: shift/reduce conflict (shift 44, reduce 22) on STAR
54: shift/reduce conflict (shift 45, reduce 22) on STARSTAR
54: shift/reduce conflict (shift 46, reduce 22) on AND
54: shift/reduce conflict (shift 47, reduce 22) on OR
state 54
	bexp : exp . PLUS exp  (22)
	bexp : exp PLUS exp .  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 22
	EOF  reduce 22
	NEWLINE  reduce 22


55: shift/reduce conflict (shift 31, reduce 29) on EQUALS
55: shift/reduce conflict (shift 32, reduce 29) on IS
55: shift/reduce conflict (shift 33, reduce 29) on IN
55: shift/reduce conflict (shift 34, reduce 29) on PLUS
55: shift/reduce conflict (shift 35, reduce 29) on MINUS
55: shift/reduce conflict (shift 36, reduce 29) on LESS
55: shift/reduce conflict (shift 37, reduce 29) on GREATER
55: shift/reduce conflict (shift 38, reduce 29) on LEQ
55: shift/reduce conflict (shift 39, reduce 29) on GEQ
55: shift/reduce conflict (shift 40, reduce 29) on NEQ
55: shift/reduce conflict (shift 41, reduce 29) on MOD
55: shift/reduce conflict (shift 42, reduce 29) on INTDIV
55: shift/reduce conflict (shift 43, reduce 29) on DIV
55: shift/reduce conflict (shift 44, reduce 29) on STAR
55: shift/reduce conflict (shift 45, reduce 29) on STARSTAR
55: shift/reduce conflict (shift 46, reduce 29) on AND
55: shift/reduce conflict (shift 47, reduce 29) on OR
state 55
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp MINUS exp .  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 29
	EOF  reduce 29
	NEWLINE  reduce 29


56: shift/reduce conflict (shift 31, reduce 23) on EQUALS
56: shift/reduce conflict (shift 32, reduce 23) on IS
56: shift/reduce conflict (shift 33, reduce 23) on IN
56: shift/reduce conflict (shift 34, reduce 23) on PLUS
56: shift/reduce conflict (shift 35, reduce 23) on MINUS
56: shift/reduce conflict (shift 36, reduce 23) on LESS
56: shift/reduce conflict (shift 37, reduce 23) on GREATER
56: shift/reduce conflict (shift 38, reduce 23) on LEQ
56: shift/reduce conflict (shift 39, reduce 23) on GEQ
56: shift/reduce conflict (shift 40, reduce 23) on NEQ
56: shift/reduce conflict (shift 41, reduce 23) on MOD
56: shift/reduce conflict (shift 42, reduce 23) on INTDIV
56: shift/reduce conflict (shift 43, reduce 23) on DIV
56: shift/reduce conflict (shift 44, reduce 23) on STAR
56: shift/reduce conflict (shift 45, reduce 23) on STARSTAR
56: shift/reduce conflict (shift 46, reduce 23) on AND
56: shift/reduce conflict (shift 47, reduce 23) on OR
state 56
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp LESS exp .  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 23
	EOF  reduce 23
	NEWLINE  reduce 23


57: shift/reduce conflict (shift 31, reduce 24) on EQUALS
57: shift/reduce conflict (shift 32, reduce 24) on IS
57: shift/reduce conflict (shift 33, reduce 24) on IN
57: shift/reduce conflict (shift 34, reduce 24) on PLUS
57: shift/reduce conflict (shift 35, reduce 24) on MINUS
57: shift/reduce conflict (shift 36, reduce 24) on LESS
57: shift/reduce conflict (shift 37, reduce 24) on GREATER
57: shift/reduce conflict (shift 38, reduce 24) on LEQ
57: shift/reduce conflict (shift 39, reduce 24) on GEQ
57: shift/reduce conflict (shift 40, reduce 24) on NEQ
57: shift/reduce conflict (shift 41, reduce 24) on MOD
57: shift/reduce conflict (shift 42, reduce 24) on INTDIV
57: shift/reduce conflict (shift 43, reduce 24) on DIV
57: shift/reduce conflict (shift 44, reduce 24) on STAR
57: shift/reduce conflict (shift 45, reduce 24) on STARSTAR
57: shift/reduce conflict (shift 46, reduce 24) on AND
57: shift/reduce conflict (shift 47, reduce 24) on OR
state 57
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp GREATER exp .  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 24
	EOF  reduce 24
	NEWLINE  reduce 24


58: shift/reduce conflict (shift 31, reduce 34) on EQUALS
58: shift/reduce conflict (shift 32, reduce 34) on IS
58: shift/reduce conflict (shift 33, reduce 34) on IN
58: shift/reduce conflict (shift 34, reduce 34) on PLUS
58: shift/reduce conflict (shift 35, reduce 34) on MINUS
58: shift/reduce conflict (shift 36, reduce 34) on LESS
58: shift/reduce conflict (shift 37, reduce 34) on GREATER
58: shift/reduce conflict (shift 38, reduce 34) on LEQ
58: shift/reduce conflict (shift 39, reduce 34) on GEQ
58: shift/reduce conflict (shift 40, reduce 34) on NEQ
58: shift/reduce conflict (shift 41, reduce 34) on MOD
58: shift/reduce conflict (shift 42, reduce 34) on INTDIV
58: shift/reduce conflict (shift 43, reduce 34) on DIV
58: shift/reduce conflict (shift 44, reduce 34) on STAR
58: shift/reduce conflict (shift 45, reduce 34) on STARSTAR
58: shift/reduce conflict (shift 46, reduce 34) on AND
58: shift/reduce conflict (shift 47, reduce 34) on OR
state 58
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp LEQ exp .  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)

	EQUALS  shift 31
	IS  shift 32
	IN  shift 33
	PLUS  shift 34
	MINUS  shift 35
	LESS  shift 36
	GREATER  shift 37
	LEQ  shift 38
	GEQ  shift 39
	NEQ  shift 40
	MOD  shift 41
	INTDIV  shift 42
	DIV  shift 43
	STAR  shift 44
	STARSTAR  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  reduce 34
	EOF  reduce 34
	NEWLINE  reduce 34


59: shift/reduce conflict (shift 31, reduce 35) on EQUALS
59: shift/reduce conflict (shift 32, reduce 35) on IS
59: shift/reduce conflict (shift 33, reduce 35) on IN
59: shift/reduce conflict (shift 34, reduce 35) on PLUS
59: shift/reduce conflict (shift 35, reduce 35) on MINUS
59: shift/reduce conflict (shift 36, reduce 35) on LESS
59: shift/reduce conflict (shift 37, reduce 35) on GREATER
59: shift/reduce conflict (shift 38, reduce 35) on LEQ
59: shift/reduce conflict (shift 39, reduce 35) on GEQ
59: shift/reduce conflict (shift 40, reduce 35) on NEQ
59: shift/reduce conflict (shift 41, reduce 35) on MOD
59: shift/reduce conflict (shift 42, reduce 35) on INTDIV
59: shift/reduce conflict (shift 43, reduce 35) on DIV
59: shift/reduce conflict (shift 44, reduce 35) on STAR
59: shift/reduce conflict (shift 45, reduce 35) on STARSTAR
59: shift/reduce conflict (shift 46, reduce 35) on AND
59: shift/reduce conflict (shift 47, reduce 35) on OR
state 59
	bexp : exp . PLUS exp  (22)
	bexp : exp . LESS exp  (23)
	bexp : exp . GREATER exp  (24)
	bexp : exp . AND exp  (25)
	bexp : exp . OR exp  (26)
	bexp : exp . EQUALS exp  (27)
	bexp : exp . STAR exp  (28)
	bexp : exp . MINUS exp  (29)
	bexp : exp . DIV exp  (30)
	bexp : exp . MOD exp  (31)
	bexp : exp . STARSTAR exp  (32)
	bexp : exp . INTDIV exp  (33)
	bexp : exp . LEQ exp  (34)
	bexp : exp . GEQ exp  (35)
	bexp : exp GEQ exp .  (35)
	bexp : exp . IS exp  (36)
	bexp : exp . IN exp  (37)
	bexp : exp . NEQ exp  (38)
